unpackaged/main/default/objects/srlg_Exposure__c/srlg_Exposure__c.object-meta.xml
<CustomObject>
    <label>Exposure</label>
    <nameField>
        <label>Exposure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exposures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>