unpackaged/main/default/objects/srlg_Exposure__c/fields/Application_Method__c.field-meta.xml
<CustomField>
    <fullName>Application_Method__c</fullName>
    <label>Application Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>