unpackaged/main/default/objects/srlg_Exposure__c/fields/Client_Has_Product_Container__c.field-meta.xml
<CustomField>
    <fullName>Client_Has_Product_Container__c</fullName>
    <label>Client Has Product Container</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>