unpackaged/main/default/objects/srlg_Exposure__c/fields/Exposure_Area__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Area__c</fullName>
    <label>Exposure Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>