unpackaged/main/default/objects/srlg_Exposure__c/fields/Exposure_Has_Stopped__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Has_Stopped__c</fullName>
    <label>Exposure Has Stopped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>