unpackaged/main/default/objects/srlg_Exposure__c/fields/Exposure_Is_Ongoing__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Is_Ongoing__c</fullName>
    <label>Exposure Is Ongoing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>