unpackaged/main/default/objects/srlg_Exposure__c/fields/Exposure_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Location_Address__c</fullName>
    <label>Exposure Location Address</label>
    <type>Address</type>
</CustomField>