unpackaged/main/default/objects/srlg_Exposure__c/fields/Exposure_Location_Information__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Location_Information__c</fullName>
    <label>Exposure Location Information</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>