unpackaged/main/default/objects/srlg_Exposure__c/fields/Exposure_Location_Matched__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Location_Matched__c</fullName>
    <label>Exposure Location Matched</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>