unpackaged/main/default/objects/srlg_Exposure__c/fields/Exposure_Type__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Type__c</fullName>
    <label>Exposure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Contact</fullName>
            </value>
            <value>
                <fullName>Indirect Contact</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>