unpackaged/main/default/objects/srlg_Exposure__c/fields/Hours_Per_Use__c.field-meta.xml
<CustomField>
    <fullName>Hours_Per_Use__c</fullName>
    <label>Hours Per Use</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>