unpackaged/main/default/objects/srlg_Exposure__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Exposures</relationshipLabel>
    <relationshipName>Exposures</relationshipName>
    <type>Lookup</type>
</CustomField>