unpackaged/main/default/objects/srlg_Exposure__c/fields/IP_Purchased_Product__c.field-meta.xml
<CustomField>
    <fullName>IP_Purchased_Product__c</fullName>
    <label>IP Purchased Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>