unpackaged/main/default/objects/srlg_Exposure__c/fields/Licensed_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Individuals__c</fullName>
    <label>Licensed Individuals</label>
    <type>TextArea</type>
</CustomField>