unpackaged/main/default/objects/srlg_Exposure__c/fields/Licensing_Information__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Information__c</fullName>
    <label>Licensing Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal License</fullName>
            </value>
            <value>
                <fullName>Company License</fullName>
            </value>
            <value>
                <fullName>Not Licensed</fullName>
            </value>
            <value>
                <fullName>Unkown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>