unpackaged/main/default/objects/srlg_Exposure__c/fields/Product_Container_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Container_Size__c</fullName>
    <label>Product Container Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>