unpackaged/main/default/objects/srlg_Exposure__c/fields/Protective_Gear_Description__c.field-meta.xml
<CustomField>
    <fullName>Protective_Gear_Description__c</fullName>
    <label>Protective Gear Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>