unpackaged/main/default/objects/srlg_Exposure__c/fields/Pws_Id__c.field-meta.xml
<CustomField>
    <fullName>Pws_Id__c</fullName>
    <label>Pws Id</label>
    <type>TextArea</type>
</CustomField>