unpackaged/main/default/objects/srlg_Exposure__c/fields/Pws_Primary_Source__c.field-meta.xml
<CustomField>
    <fullName>Pws_Primary_Source__c</fullName>
    <label>Pws Primary Source</label>
    <type>TextArea</type>
</CustomField>