unpackaged/main/default/objects/srlg_Exposure__c/fields/Pws_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Pws_Provider_Name__c</fullName>
    <label>Pws Name</label>
    <type>TextArea</type>
</CustomField>