unpackaged/main/default/objects/srlg_Exposure__c/fields/Pws_Zip_Codes__c.field-meta.xml
<CustomField>
    <fullName>Pws_Zip_Codes__c</fullName>
    <label>Pws Zip Codes</label>
    <type>TextArea</type>
</CustomField>