unpackaged/main/default/objects/srlg_Exposure__c/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <formula>IF(
  CONTAINS(Exposure_Location_Address__Street__s, MID($Setup.Formula_References__c.Line_Break__c ,3,1)), 
  LEFT(
    Exposure_Location_Address__Street__s, 
    FIND(MID($Setup.Formula_References__c.Line_Break__c,3,1), Exposure_Location_Address__Street__s)
  ),
  Exposure_Location_Address__Street__s
)</formula>
    <label>Street 1</label>
    <type>Text</type>
</CustomField>