unpackaged/main/default/objects/srlg_Exposure__c/fields/Total_Exposure_Length__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure_Length__c</fullName>
    <formula>TEXT(FLOOR((IF(ISBLANK(End_Date__c), TODAY(), End_Date__c) - Start_Date__c)/365)) &amp; &#39; years, &#39; &amp; 
TEXT(FLOOR(MOD((IF(ISBLANK(End_Date__c), TODAY(), End_Date__c) - Start_Date__c),365)/30)) &amp; &#39; months, &#39; &amp; 
TEXT(MOD(MOD((IF(ISBLANK(End_Date__c), TODAY(), End_Date__c) - Start_Date__c),365),30)) &amp; &#39; days&#39;</formula>
    <label>Total Exposure Length</label>
    <type>Text</type>
</CustomField>