unpackaged/main/default/objects/srlg_Exposure__c/fields/Used_Product_At_Home__c.field-meta.xml
<CustomField>
    <fullName>Used_Product_At_Home__c</fullName>
    <label>Used Product At Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>