unpackaged/main/default/objects/srlg_Exposure__c/fields/Uses_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Uses_Per_Year__c</fullName>
    <label>Uses Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>