unpackaged/main/default/objects/srlg_Exposure__c/fields/Water_Bill__c.field-meta.xml
<CustomField>
    <fullName>Water_Bill__c</fullName>
    <label>Water Bill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
                <isActive>false</isActive>
                <label>Unsure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>