unpackaged/main/default/objects/srlg_Exposure__c/fields/Water_Test__c.field-meta.xml
<CustomField>
    <fullName>Water_Test__c</fullName>
    <label>Water Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>