unpackaged/main/default/objects/srlg_Exposure__c/fields/Water_Well_Tested_Date__c.field-meta.xml
<CustomField>
    <fullName>Water_Well_Tested_Date__c</fullName>
    <label>Water Well Tested Date</label>
    <type>Date</type>
</CustomField>