unpackaged/main/default/objects/srlg_Exposure__c/fields/Water_Well_Type__c.field-meta.xml
<CustomField>
    <fullName>Water_Well_Type__c</fullName>
    <label>Water Well Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>